Added US_6 booking/client